# file_changer

./: .env.dev  .env.dev.example  .gitignore  README.md  docker-compose.dev.yml
backend/: .env.dev.example  CHANGES.md  DEVELOPMENT.md  QUICKSTART.md  pyproject.toml  ruff.toml
backend/migrations/versions/: 0001_add_indexes.py  0d6439d2e79f_init.py
backend/src/: __init__.py  app.py  config.py  database.py  main.py  models.py  repositories.py  schemas.py  service.py  tasks.py
backend/src/api/: deps.py
backend/src/api/routers/: alerts.py  files.py
backend/src/application/: alerts.py  exceptions.py  files.py
backend/src/application/services/: alert_service.py  file_service.py
backend/src/domain/: constants.py  entities.py
backend/src/domain/interfaces/: alert_repository.py  file_repository.py  file_storage.py
backend/src/infrastructure/: storage.py
backend/src/infrastructure/persistence/: repositories.py  unit_of_work.py
backend/src/infrastructure/storage/: file_storage.py
backend/src/tasks/: celery_tasks.py
backend/tests/: conftest.py  test_alerts_list.py  test_api_auth.py  test_files_list.py  test_files_read_update_delete.py  test_files_upload.py
frontend/: .env.local.example  .env.production  README.md  env.production.example
frontend/src/app/: api.ts  page.tsx
frontend/src/app/components/: AlertTable.tsx  FileTable.tsx  UploadModal.tsx
frontend/src/app/test/: page.tsx
frontend/src/features/file-manager/: FileManagerDashboard.tsx
frontend/src/lib/api/: alertsClient.ts  filesClient.ts  http.ts  types.ts
(+2 files in other folders)
