[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "aiofiles>=24.1.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.135.3",
    "loguru>=0.7.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.22.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
